--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,44 @@
 body {
 background-color: rgb(238, 238, 238);
 position: relative;
+height:100vh;
 }
 #todolist {
 padding: 0;
 list-style-type: none;
-width:70%;
+width:60%;
 position: absolute;
-left: 50%;
-top: 50%;
+left: 20%;
+top: 10%;
+background-color:rgba(255, 255, 255, 0.814);
+box-shadow: 4px 4px 6px rgba(112, 112, 112, 0.423), -4px 4px 6px rgba(112, 112, 112, 0.423);
+}
+.task, h2{
+margin:0;
+display:flex;
+justify-content: space-between;
+padding: 0 10px;
+height: 50px;
+align-items: center;
+border-bottom: 1px solid rgba(181, 180, 180, 0.811);
+}
+
+.labelChecked {
+text-decoration:line-through;
+}
+
+
+#todolist button {
+width: 100%;
+height: 50px;
+background-color: rgb(238, 238, 238);
+border-style: none;
+color: rgb(102, 101, 101)
+
+}
+
+#todolist button:hover {
+text-decoration: underline;
+  cursor: pointer;
+  color:black;
 }
